sorted/tests/06-pattern-path.stderr
error: Error::Fmt should sort before Error::Io
  --> tests/06-pattern-path.rs:33:20
   |
33 |             Error::Fmt(e) => write!(f, "{}", e),
   |                    ^^^
